--- a/vignettes/coexistence_plot.Rmd
+++ b/vignettes/coexistence_plot.Rmd
@@ -8,17 +8,17 @@ vignette: >
   \usepackage[utf8]{inputenc}
 ---
 
-In this document, we draw the coexistence region of our plant community and locate every pair of species in this region accroding to two orthogonal axes. Average fitness differences (y-axis) and niche differences (x-axis). For that, we use the parameters previously calculated for each species (see vignette \code{Multi-species parameter optimization}), and the germination and seed soil bank survival rates, which are both stored with the package. Please note that germination and seed survival rates are a particular feature of the annual plant model (see *Godoy and Levine. 2014. Ecology 95: 726-736* for details), but other models might be adapted to other species particularities. 
+In this document, we draw the coexistence region of our plant community and locate every pair of species in this region accroding to two orthogonal axes. Average fitness differences (y-axis) and niche differences (x-axis). For that, we use the parameters previously calculated for each species (see vignette `Multi-species parameter optimization`), and the germination and seed soil bank survival rates, which are both stored with the package. Please note that germination and seed survival rates are a particular feature of the annual plant model (see *Godoy and Levine. 2014. Ecology 95: 726-736* for details), but other models might be adapted to other species particularities. 
 
-```{r}
+```{r message=F, warning=F}
 library(cxr)
 data(param_estimates)
 data(species_rates)
 ```
 
-First, compile the parameters from the original results, which are in a nested list. We will use the estimates from the most complex model (BH_5), and the optimization method *L-BFGS-B* (see the help of \code{stats::optim} for details).
+First, compile the parameters from the original results, which are in a nested list. We will use the estimates from the most complex model (BH_5), and the optimization method *L-BFGS-B* (see the help of `stats::optim`} for details).
 
-```{r}
+```{r message=F, warning=F}
 sp.names <- sort(unique(names(param_estimates)))
 alpha.matrix <- matrix(0,nrow = length(sp.names),ncol = length(sp.names))
 lambda.values <- numeric(length(sp.names))
@@ -35,7 +35,7 @@ for(i.sp in 1:length(sp.names)){
 
 Now, we build a dataframe with all unique pairwise combinations of species
 
-```{r}
+```{r message=F, warning=F}
 # function from https://stackoverflow.com/questions/17171148/non-redundant-version-of-expand-grid
 expand.grid.unique <- function(x, y, include.equals=FALSE)
 {
@@ -54,9 +54,9 @@ pairwise.ratios$fitness.ratio <- 0
 pairwise.ratios$niche.overlap <- 0
 ```
 
-and compute the average fitness ratio and niche overlap between pairs
+and compute the average fitness ratio and niche overlap between pairs. Note that the `AvgFitnessRatio` function may calculate this quantity for the annual plant model, by providing `germ.rate` and `survival.rate`, or the general version, by only providing `lambda`.
 
-```{r}
+```{r message=F, warning=F}
 # gather fitness ratio/niche overlap between each pair
 for(i.pair in 1:nrow(pairwise.ratios)){
   my.sp <- c(pairwise.ratios$sp1[i.pair],pairwise.ratios$sp2[i.pair])
@@ -77,7 +77,7 @@ For drawing the plot, we adapt, simplified, the great example from *Ke and Lette
 
 First, generate a dataframe for the limits of the different regions, and specify the axes limits. In this example, we focus on species pairs that are close to the region of coexistence. Many species pairs, not shown in the plot, display wide average fitness ratios, falling clearly on the exclusion areas.
 
-```{r}
+```{r message=F, warning=F}
 x <- seq(1,-1,by=-0.001)
 y1 <- 1/(1-x)
 y2 <- 1-x
@@ -92,7 +92,7 @@ my.lim.y = 2
 
 the code for the plot itself is
 
-```{r echo=FALSE}
+```{r message=F, warning=F}
 
 coex.plot <- ggplot2::ggplot() + 
   ggplot2::geom_line(data = lines, ggplot2::aes(x = x, y = y,linetype = fun,group = fun), col = "black") +
